aded the XSL Transformation Proxy

--- a/servicemix-osgi/pom.xml
+++ b/servicemix-osgi/pom.xml
@@ -32,5 +32,6 @@
     <modules>
         <module>proxy</module>
         <module>cbr</module>
+        <module>xslt</module>
     </modules>
 </project>
