--- a/servicemix-osgi/pom.xml
+++ b/servicemix-osgi/pom.xml
@@ -33,5 +33,6 @@
         <module>proxy</module>
         <module>cbr</module>
         <module>xslt</module>
+        <module>http-hbr</module>
     </modules>
 </project>
