added the CBR on SOAP Header performance test

--- a/servicemix-osgi/pom.xml
+++ b/servicemix-osgi/pom.xml
@@ -34,5 +34,6 @@
         <module>cbr</module>
         <module>xslt</module>
         <module>http-hbr</module>
+        <module>soap-hbr</module>
     </modules>
 </project>
