added the Secure Proxy performance test

--- a/servicemix-osgi/pom.xml
+++ b/servicemix-osgi/pom.xml
@@ -35,5 +35,6 @@
         <module>xslt</module>
         <module>http-hbr</module>
         <module>soap-hbr</module>
+        <module>secure-proxy</module>
     </modules>
 </project>
