update the project

--- a/servicemix-osgi/soap-hbr/pom.xml
+++ b/servicemix-osgi/soap-hbr/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>servicemix-osgi</artifactId>
         <groupId>org.apache.cmueller.camel.esbperf</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>..</relativePath>
     </parent>
 
