--- a/servicemix-osgi/proxy/pom.xml
+++ b/servicemix-osgi/proxy/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cmueller.camel.esbperf</groupId>
         <artifactId>servicemix-osgi</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
         <relativePath>..</relativePath>
     </parent>
 
