--- a/servicemix-osgi/secure-proxy/pom.xml
+++ b/servicemix-osgi/secure-proxy/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>servicemix-osgi</artifactId>
         <groupId>org.apache.cmueller.camel.esbperf</groupId>
-        <version>1.1.0</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <groupId>org.apache.cmueller.camel.esbperf.servicemix-osgi</groupId>
