--- a/servicemix-osgi/pom.xml
+++ b/servicemix-osgi/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cmueller.camel.esbperf</groupId>
     <artifactId>servicemix-osgi</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
