improved the tests

--- a/servicemix-osgi/proxy/.project
+++ b/servicemix-osgi/proxy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>proxy</name>
+	<name>org.apache.cmueller.camel.esbperf.servicemix-osgi.proxy</name>
 	<comment></comment>
 	<projects>
 	</projects>
