--- a/servicemix-osgi/.project
+++ b/servicemix-osgi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>servicemix-osgi</name>
+	<name>org.apache.cmueller.camel.esbperf.servicemix-osgi</name>
 	<comment></comment>
 	<projects>
 	</projects>
