--- a/servicemix-osgi/etc/org.apache.karaf.features.cfg
+++ b/servicemix-osgi/etc/org.apache.karaf.features.cfg
@@ -26,4 +26,4 @@ featuresRepositories=mvn:org.apache.karaf.assemblies.features/standard/2.2.4/xml
 # Comma separated list of features to install at startup
 #
 #featuresBoot=karaf-framework,config,activemq-broker,activemq-spring,cxf-specs,camel,camel-activemq,camel-cxf,camel-blueprint,war
-featuresBoot=karaf-framework,config,cxf-specs,camel,camel-cxf,camel-saxon,camel-blueprint
+featuresBoot=karaf-framework,config,cxf-specs,war,camel,camel-jaxb,camel-blueprint,camel-cxf,camel-saxon
