--- a/servicemix-osgi/etc/org.apache.karaf.features.cfg
+++ b/servicemix-osgi/etc/org.apache.karaf.features.cfg
@@ -20,10 +20,11 @@
 #
 # Comma separated list of features repositories to register by default
 #
-featuresRepositories=mvn:org.apache.karaf.assemblies.features/standard/2.2.4/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.2.4/xml/features,mvn:org.apache.servicemix.nmr/apache-servicemix-nmr/1.5.0/xml/features,mvn:org.apache.servicemix/apache-servicemix/4.4.2/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.8.5/xml/features,mvn:org.apache.activemq/activemq-karaf/5.5.1/xml/features
+featuresRepositories=mvn:org.apache.karaf.assemblies.features/standard/2.2.9/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.2.9/xml/features,mvn:org.apache.servicemix.nmr/apache-servicemix-nmr/1.6.0-SNAPSHOT/xml/features,mvn:org.apache.servicemix/apache-servicemix/4.5.0-SNAPSHOT/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.10.3/xml/features,mvn:org.apache.activemq/activemq-karaf/5.7.0/xml/features
+
 
 #
 # Comma separated list of features to install at startup
 #
 #featuresBoot=karaf-framework,config,activemq-broker,activemq-spring,cxf-specs,camel,camel-activemq,camel-cxf,camel-blueprint,war
-featuresBoot=karaf-framework,config,cxf-specs,wss4j,war,camel,camel-jaxb,camel-blueprint,camel-cxf,camel-saxon
+featuresBoot=karaf-framework,config,cxf,camel,camel-cxf,camel-saxon
