--- a/karaf/etc/org.apache.karaf.features.cfg
+++ b/karaf/etc/org.apache.karaf.features.cfg
@@ -27,4 +27,4 @@ featuresRepositories=mvn:org.apache.karaf.assemblies.features/standard/2.3.0/xml
 #
 # Comma separated list of features to install at startup
 #
-featuresBoot=config,ssh,management,kar,camel,camel-cxf,camel-saxon,camel-blueprint
+featuresBoot=config,ssh,management,kar,camel-core,camel-blueprint,camel-cxf,camel-saxon
