--- a/karaf/secure-proxy/pom.xml
+++ b/karaf/secure-proxy/pom.xml
@@ -42,9 +42,14 @@
             <version>${org.apache.camel.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-ws-security</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.ws.security</groupId>
             <artifactId>wss4j</artifactId>
-            <version>1.6.5</version>
+            <version>1.6.8</version>
         </dependency>
     </dependencies>
 
