--- a/servicemix-osgi/cbr/pom.xml
+++ b/servicemix-osgi/cbr/pom.xml
@@ -25,17 +25,17 @@
         <artifactId>servicemix-osgi</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
-    
+
     <groupId>org.apache.cmueller.camel.esbperf.servicemix-osgi</groupId>
     <artifactId>cbr</artifactId>
     <packaging>bundle</packaging>
     
     <dependencies>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-blueprint</artifactId>
-            <version>${org.apache.camel.version}</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.apache.camel</groupId> -->
+<!--             <artifactId>camel-blueprint</artifactId> -->
+<!--             <version>${org.apache.camel.version}</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-cxf</artifactId>
