--- a/karaf/secure-proxy/pom.xml
+++ b/karaf/secure-proxy/pom.xml
@@ -44,12 +44,12 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
-            <version>2.7.1</version>
+            <version>${org.apache.cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ws.security</groupId>
             <artifactId>wss4j</artifactId>
-            <version>1.6.8</version>
+            <version>${org.apache.ws.security.wss4j.version}</version>
         </dependency>
     </dependencies>
 
