--- a/karaf/pom.xml
+++ b/karaf/pom.xml
@@ -20,14 +20,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cmueller.camel.esbperf</groupId>
     <artifactId>karaf</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.15.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
-        <org.apache.camel.version>2.15.1</org.apache.camel.version>
+        <org.apache.camel.version>2.15.0</org.apache.camel.version>
         <org.apache.cxf.version>3.0.4</org.apache.cxf.version>
         <org.apache.ws.security.wss4j.version>1.6.18</org.apache.ws.security.wss4j.version>
         <org.apache.felix.maven-bundle-plugin.version>2.5.4</org.apache.felix.maven-bundle-plugin.version>
+
+        <jdk.source.version>1.7</jdk.source.version>
+        <jdk.target.version>1.7</jdk.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -39,4 +42,27 @@
         <module>soap-hbr</module>
         <module>secure-proxy</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                    <configuration>
+                        <source>${jdk.source.version}</source>
+                        <target>${jdk.target.version}</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>apache.snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 </project>
