upgrade to Camel 2.15.0

--- a/karaf/etc/org.apache.karaf.features.cfg
+++ b/karaf/etc/org.apache.karaf.features.cfg
@@ -17,14 +17,33 @@
 #
 ################################################################################
 
-respectStartLvlDuringFeatureStartup=false
+#
+# Defines if the startlvl should be respected during feature startup. The default value is true. The default
+# behavior for 2.x is false (!) for this property
+#
+# Be aware that this property is deprecated and will be removed in Karaf 4.0. So, if you need to
+# set this to false, please use this only as a temporary solution!
+#
+#respectStartLvlDuringFeatureStartup=true
+
+
+#
+# Defines if the startlvl should be respected during feature uninstall. The default value is true.
+# If true, means stop bundles respecting the descend order of start level in a certain feature.
+#
+#respectStartLvlDuringFeatureUninstall=true
 
 #
 # Comma separated list of features repositories to register by default
 #
-featuresRepositories=mvn:org.apache.karaf.assemblies.features/standard/2.3.0/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.3.0/xml/features,mvn:org.apache.cxf.karaf/apache-cxf/2.7.1/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.11-SNAPSHOT/xml/features
+featuresRepositories = mvn:org.apache.karaf.assemblies.features/standard/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/spring/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.4.2/xml/features,mvn:org.apache.cxf.karaf/apache-cxf/3.0.4/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.15.0/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
-featuresBoot=config,ssh,management,kar,camel-core,camel-blueprint,camel-cxf,camel-saxon
+featuresBoot = karaf-framework,shell,features,service-security,admin,config,ssh,management,kar,deployer,diagnostic,camel-core,camel-blueprint,camel-cxf,cxf-ws-security,wss4j,camel-saxon
+
+#
+# Defines if the boot features are started in asynchronous mode (in a dedicated thread)
+#
+featuresBootAsynchronous=false
