--- a/karaf/secure-proxy/pom.xml
+++ b/karaf/secure-proxy/pom.xml
@@ -47,8 +47,8 @@
             <version>${org.apache.cxf.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.ws.security</groupId>
-            <artifactId>wss4j</artifactId>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-common</artifactId>
             <version>${org.apache.ws.security.wss4j.version}</version>
         </dependency>
     </dependencies>
