added the echo-service, a WAB (web application bundle)

--- a/karaf/etc/org.apache.karaf.features.cfg
+++ b/karaf/etc/org.apache.karaf.features.cfg
@@ -36,12 +36,12 @@
 #
 # Comma separated list of features repositories to register by default
 #
-featuresRepositories = mvn:org.apache.karaf.assemblies.features/standard/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/spring/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.4.2/xml/features,mvn:org.apache.cxf.karaf/apache-cxf/3.0.4/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.15.0/xml/features
+featuresRepositories = mvn:org.apache.karaf.assemblies.features/standard/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/spring/2.4.2/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/2.4.2/xml/features,mvn:org.apache.cxf.karaf/apache-cxf/3.0.4/xml/features,mvn:org.apache.camel.karaf/apache-camel/2.15.2/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
-featuresBoot = karaf-framework,shell,features,service-security,admin,config,ssh,management,kar,deployer,diagnostic,camel-core,camel-blueprint,camel-cxf,cxf-ws-security,wss4j,camel-saxon
+featuresBoot = karaf-framework,shell,features,service-security,admin,config,ssh,management,kar,deployer,diagnostic,camel-core,camel-blueprint,camel-cxf,cxf-transports-jms,cxf-http,cxf-ws-security,cxf-bindings-corba,camel-saxon
 
 #
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
