--- a/karaf/pom.xml
+++ b/karaf/pom.xml
@@ -20,11 +20,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cmueller.camel.esbperf</groupId>
     <artifactId>karaf</artifactId>
-    <version>2.15.0-SNAPSHOT</version>
+    <version>2.15.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
-        <org.apache.camel.version>2.15.0</org.apache.camel.version>
+        <org.apache.camel.version>2.15.2</org.apache.camel.version>
         <org.apache.cxf.version>3.0.4</org.apache.cxf.version>
         <org.apache.ws.security.wss4j.version>2.0.3</org.apache.ws.security.wss4j.version>
         <org.apache.felix.maven-bundle-plugin.version>2.5.4</org.apache.felix.maven-bundle-plugin.version>
@@ -35,6 +35,7 @@
     </properties>
 
     <modules>
+        <module>echo-service</module>
         <module>proxy</module>
         <module>cbr</module>
         <module>xslt</module>
